# MSOC-S-IKF

./: 1_traj.txt  CMakeLists.txt  README.md
matches/: CMakeLists.txt  README.txt  package.xml
matches/4Seasons/: officeloop2_matches_with_officeloop1.txt
matches/4Seasons/gt/: office_loop_1_cam.txt  office_loop_1_imu.txt  office_loop_2_cam.txt  office_loop_2_imu.txt
matches/EuRoC/: MH04_mathces_with_MH01.txt  MH05_mathces_with_MH01.txt  V102_matches_with_V101.txt  V103_matches_with_V101.txt  V1_01_easy_cam.txt  V202_matches_with_V201.txt  V203_matches_with_V201.txt  V2_01_easy_cam.txt
matches/EuRoC/gt/: MH_02_easy_cam.txt  MH_03_medium_cam.txt  MH_04_difficult_cam.txt  MH_05_difficult_cam.txt  V1_02_medium_cam.txt  V1_03_difficult_cam.txt  V2_02_medium_cam.txt  V2_03_difficult_cam.txt
matches/Kaist/: urban39_matches_with_urban38.txt
matches/YQ/: YQ1_cam.txt  YQ2_matches_with_YQ1.txt  YQ3_matches_with_YQ1.txt  YQ4_matches_with_YQ1.txt
matches/YQ/gt/: YQ1_imu.txt  YQ2_cam.txt  YQ2_imu.txt  YQ3_cam.txt  YQ3_imu.txt  YQ4_cam.txt  YQ4_imu.txt
matches/sim/: imperfect_map_keyframe.txt  perfect_map_keyframe.txt  scenario_1.txt  scenario_2_perfect.txt  scenario_3.txt  scenario_4.txt
matches/sim/gt/: augmented_variable.txt  map_pose.txt
matches/sim_for_TRO_revised/q_horizonal_m_vertical/: README.txt  circle_20_15loop_matchinfo_empty.txt  circle_20_20loop_matchinfo_empty.txt  circle_20_20loop_matchinfo_empty_2.txt  circle_20_20loop_matchinfo_empty_3.txt  circle_20_traj_cam_map_15loop.txt  circle_20_traj_cam_map_15loop_horizonal.txt  circle_20_traj_cam_query.txt  (+36 more)
(+186 files in other folders)
