<?xml version="1.0"?>
<package>
    <!-- Package Information -->
    <name>matches</name>
    <version>0.0.0</version>
    <description>
        Mathches information used for performing MSOC-S-IKF localization algorithm
    </description>

    <!-- Code Authors -->
    <author email="zhuqingzhang@zju.edu.cn">Zhuqing Zhang</author>
    <maintainer email="zhuqingzhang@zju.edu.cn">Zhuqing Zhang</maintainer>

    <!-- Licensing -->
    <license>MIT</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend>

</package>
